--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,24 @@
 *.exe
 *.out
 *.app
+
+configure
+config.log
+depcomp
+config.guess
+config.h
+config.sub
+config.status
+stamp-h1
+config.h.in
+libtool
+autom4te.cache
+missing
+aclocal.m4
+install-sh
+
+Makefile
+Makefile.in
+.deps
+.libs
+*.a
